<resources>
    <string name="app_name">MobileGuard</string>
    <string name="username">账号:</string>
    <string name="password">密码:</string>
    <string name="conform_password">确认密码:</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="remember">自动登录</string>
    <string name="birthday">年龄:</string>
    <string name="description">描述:</string>
    <string name="submit_register">提交注册</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="safenumber">安全号码:</string>
    <string name="isopenagainstburglars">是否绑定sim卡:</string>
    <string name="functiondescription">功能简介</string>
    <string name="location">远程追踪:#@location@#</string>
    <string name="alarm">音乐报警:#@alarm@#</string>
    <string name="wipedata">远程删除数据:#@wipedata@#</string>
    <string name="lockscreen">远程锁屏:#@lockscreen@#</string>
    <string name="blacknumber">电话</string>
    <string name="blackinfo">信息</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="handle">手动添加</string>
    <string name="choose">从联系人选择</string>
    <string name="dialogtitle">请选择添加方式</string>
    <string name="softwaremanager">软件管理</string>
    <string name="appuninstall">卸载</string>
    <string name="apprun">运行</string>
    <string name="appshare">分享</string>
    <string name="appruning">运行中的进程:</string>
    <string name="memoryleftandused">剩余/总内存:</string>
    <string name="processmanager">进程管理</string>
    <string name="cleancache">缓 存 清 理</string>
    <string name="waittips">正在扫描....</string>
    <string name="bangsim">绑定sim卡</string>
    <string name="blacklist">开启黑名单</string>
    <string name="commentseare">评论区</string>
    <string name="submitcomment">提交</string>
    <string name="updateapp">更新应用</string>
    <string name="updatetips">更新提示！</string>
    <string name="updateversion">版本已经更新到</string>
    <string name="isupdaste">是否更新应用</string>
    <string name="traffictitle">流量查看</string>
</resources>
