<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="#6495ED"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/icon_login"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/ic_mobileguard"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="#6495ED"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_shape"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/useraccount"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittext_shape_top"
                    android:hint="@string/username"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/userpassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittext_shape_buttom"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="30sp" />

            </LinearLayout>
        </LinearLayout>
        <CheckBox
            android:id="@+id/isautologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember"

            android:textSize="15sp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_shape"
                android:text="@string/login" />

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/btn_shape"
                android:text="@string/register" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
