<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@android:color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/bangsim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bangsim"
            android:textSize="25sp"
            android:layout_weight="8"/>
        <CheckBox
            android:id="@+id/isbangsim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:button="@null"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_checkbox_selector"
            android:gravity="right"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@android:color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/openblacklist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/blacklist"
            android:layout_weight="8"/>
        <CheckBox
            android:id="@+id/isonblacklist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:button="@null"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_checkbox_selector"
            android:gravity="right"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@android:color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvupdateapp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/updateapp"
            android:textSize="25sp"
            android:layout_weight="8"/>
        <CheckBox
            android:id="@+id/updateapp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:button="@null"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_checkbox_selector"
            android:gravity="right"/>
    </LinearLayout>




</LinearLayout>
